Sun Apr 20 04:45:13 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (copy_stream_body): use readpartial and write method for
	  non-IOs such as StringIO and ARGF.

Fri Apr 18 20:57:33 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_array.rb: add tests to achieve over 95% test coverage
	  of array.c.

Fri Apr 18 17:37:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_mark_locations): get rid of underflow.

	* gc.c (mark_current_machine_context): check if the main thread stack
	  position may shink under the intialized position.  [ruby-core:16436]

Thu Apr 17 22:20:52 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* enc/trans/utf_16_32.c (fun_so_to_utf_16be, fun_so_to_utf_16le): add
	  parentheses to remove warnings of gcc.

	* io.c (rb_io_getc): remove unused variables.

	* compile.c (NODE_NEXT, NODE_REDO): remove unused labels.

	* ext/nkf/nkf.c (rb_nkf_convert): remove unused variables.

	* ext/syck/rubyext.c (syck_resolver_initialize,
	  syck_resolver_detect_implicit, syck_emitter_emit): remove unused
	  variables.

Thu Apr 17 20:12:47 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_rubyoptions.rb (test_search): enable some assertions.

	* test/ruby/test_rubyoptions.rb: flunk message in win32.

Thu Apr 17 16:07:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (ruby): run in C locale.

	* test/ruby/test_rubyoptions.rb (test_encoding): --encoding does not
	  affect source code.

Thu Apr 17 00:45:41 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_process.rb (test_rlimit_nofile): reset RLIMIT_NOFILE
	  before exit (for gcov).

	* test/ruby/test_rubyoptions.rb: new tests for option of ruby
	  interpreter, to achieve over 95% test coverage of ruby.c.

Wed Apr 16 02:40:44 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): preludes and parser need to run in safe
	  level 0.  [ruby-dev:34407]

Wed Apr 16 02:26:27 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
